tests/paczka1/small_fuzzy/19756914.err
Error in line 4: CziUa S647 89,2
Error in line 5: CziUa S378 8,9
Error in line 6: lCsCGxJSZ5U S787 69,4
Error in line 8: lCsCGxJSZ5U S231 25,3
Error in line 3: i3KqQV S787 92,7
Error in line 16: S231 S231 59,24
